Fix the layout break when the content too long of label and sub-label.

--- a/src/components/CustomCheckbox/styles/index.less
+++ b/src/components/CustomCheckbox/styles/index.less
@@ -144,18 +144,6 @@
   }
 }
 
-.main-label-name,
-.sub-label-name {
-  width: 100%;
-  font-size: 14px;
-  font-family: Roboto;
-  line-height: calc(22 / 14);
-
-  &:hover {
-    font-weight: 400;
-  }
-}
-
 .main-label-name {
   text-transform: capitalize;
 }
